docs(UX): avoid horizontal flickering

--- a/docs/source/stylesheets/components/_containers.scss
+++ b/docs/source/stylesheets/components/_containers.scss
@@ -1,3 +1,8 @@
+// Avoid horizontal flickering when scrollbar appears
+body {
+  overflow-y: scroll;
+}
+
 /* Containers
 ================*/
 .container {
